--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^3.0.0",
     "jsonwebtoken": "^7.2.1",
     "morgan": "^1.7.0",
+    "nodemon": "^1.11.0",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sendgrid": "^4.7.1",
